Fix collapsed navbar remnant issues

--- a/style.css
+++ b/style.css
@@ -62,9 +62,9 @@ html,body {
     font-weight: 600;
     height: 58px;
     padding-top: 1em;
-    min-width: 510px;
+    max-width: 100%;
     margin-left: 15px;
-    margin-right: 15%;
+    margin-right: 15px;
 
 }
 
@@ -286,11 +286,7 @@ picture {
     padding-top: 0px;
 }
 
-    .navbar-collapse .navbar-nav .nav-item {
-    min-width: 690px;
 
-
-}
 }
 
 @media only screen and (min-width: 990px) {
